tests/snapshots/serde__de_number_primitive_zero.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Number(0)"
---
=== VALUE ===
HeapReference(*0)

=== HEAP ===
Heap {
    0: NumberObject(
        0.0,
    ),
}

