tests/snapshots/serde__de_object_empty.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\n{}"
---
=== VALUE ===
HeapReference(*0)

=== HEAP ===
Heap {
    0: Object {},
}

