tests/snapshots/serde__de_object_smi_property_key_as_str.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\n{\"1\": 5}"
---
=== VALUE ===
HeapReference(*0)

=== HEAP ===
Heap {
    0: Object {
        1: I32(
            5,
        ),
    },
}

