tests/snapshots/serde__de_object_smi_property_key_neg.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\n{[-1]: 4}"
---
=== VALUE ===
HeapReference(*0)

=== HEAP ===
Heap {
    0: Object {
        OneByte("-1"): I32(
            4,
        ),
    },
}

