tests/snapshots/serde__de_object_two_byte_property_key.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\n{\"foo🗄️\": 6}"
---
=== VALUE ===
HeapReference(*0)

=== HEAP ===
Heap {
    0: Object {
        TwoByte("foo🗄️"): I32(
            6,
        ),
    },
}

