tests/snapshots/serde__de_object_two_properties.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\n{\"a\": 1, \"b\": 2}"
---
=== VALUE ===
HeapReference(*0)

=== HEAP ===
Heap {
    0: Object {
        OneByte("a"): I32(
            1,
        ),
        OneByte("b"): I32(
            2,
        ),
    },
}

