tests/snapshots/serde__de_regexp.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\n/asd/gi"
---
=== VALUE ===
HeapReference(*0)

=== HEAP ===
Heap {
    0: RegExp {
        pattern: OneByte("asd"),
        flags: RegExpFlags(
            GLOBAL | IGNORE_CASE,
        ),
    },
}

