tests/snapshots/serde__de_regexp_two_byte.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\n/🗄️/"
---
=== VALUE ===
HeapReference(*0)

=== HEAP ===
Heap {
    0: RegExp {
        pattern: TwoByte("🗄️"),
        flags: RegExpFlags(
            0x0,
        ),
    },
}

